# CHANGELOG
# ---
# * Fix credentials for remote Authorize.net TEST MODE test [cody]
#
# * Add AVS module and AVS::Result class [cody]
#
# * Update base gateway class RDOC [cody]
#
# * Update the README with the latest list of supported gateways. Update the example in the README to include the verification value, which is now required by the credit card object by default. [cody]
#
# * Handle the return from 2Checkout [cody]
#
# * Automatically determine the credit card type when a type is not provided [cody]
#
# * Revert to initial implementation of LUHN algorithm because it all fits in one simple method [cody]
#
# * Remove unused api_cert_chain.crt file [cody]
#
# * Update PaypalGateway, and PaypalExpressGateway to send requests to the correct endpoints when using API signatures [cody]
#
# * Successful return code for HiTRUST is actually 00 [cody]
#
# * Make ActiveMerchant::Billing::Error a subclass of ActiveMerchant::ActiveMerchantError [cody]
#
# * Handle the return from the offsite payment gateways [cody]
#
# * Default HiTRUST order description to "Store purchase" [cody]
#
# * Fix HiTRUST field names [cody]
#
# * Add support for passing in the locale code [georg.fr...@meandevel.com]
#
# * Add support for the Offsite payment gateway HiTRUST [cody]
#
# * Accept SuccessWithWarning as success [cody]
#
# * Add a link to the LinkPoint staging server docs in remote_linkpoint_test.rb [cody]
#
# * Update Discover regex [cody]
#
# * Match full pan range of Maestro cards from 12 - 19 digits in length [cody]
#
# * Fix errors on base of CreditCard [josh.bassett]
#
# * Update product to use Rubigen instead of stolen Rails generator [cody]
#
# * Mimic directory structure of unit tests in remote tests [cody]
# 
# * Restructure the location of the remote tests [cody] 
#
# * Ensure DataCash order_id is limited to 30 characters [cody]
#
# * Return the pretty messages from PayJunction based on the return code [cody]
#